packages/otupy/otupy-1.1.12.tar.gz/otupy-1.1.12/validation/openc2-cbor-samples/tests/commands/bad/start_container_ext_specialchar1.cbor
¢factionestartftarget¡qx-acm&e:container¡lcontainer_idx$E57C0116-D291-4AF3-BEF9-0F5B604A2C85